<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color2"
        tools:context=".SecondActivity">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow"
            android:background="@color/color2"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="changeActivity2"
            android:contentDescription="@string/todo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Login"
            android:textSize="@dimen/tv_login_size"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.236"
            app:layout_constraintVertical_bias="0.179"
            android:id="@+id/textView4"/>

    <EditText android:layout_width="@dimen/et_login_width"
              android:layout_height="@dimen/et_login_height"
              android:gravity="center"
              android:text="@string/et_keevarleo"
              android:textColor="@color/white"
              android:hint="@string/et_user"
              android:textColorHint="@color/spruce"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/editText6"
              app:layout_constraintHorizontal_bias="0.495"
              app:layout_constraintVertical_bias="0.469"/>

    <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@mipmap/user2_icon"
            app:layout_constraintBottom_toBottomOf="@+id/editText6"
            app:layout_constraintTop_toTopOf="@+id/editText6"
            app:layout_constraintStart_toStartOf="@+id/editText6"
            android:contentDescription="@string/todo"
            android:id="@+id/imageView"/>

    <EditText android:layout_width="@dimen/et_login_width"
              android:layout_height="@dimen/et_login_height"
              android:gravity="center"
              android:textColor="@color/white"
              android:hint="@string/et_pass"
              android:textColorHint="@color/spruce"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/editText7"
              app:layout_constraintHorizontal_bias="0.497"
              app:layout_constraintTop_toBottomOf="@+id/editText6"
              app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:src="@mipmap/lock2_icon"
            app:layout_constraintBottom_toBottomOf="@+id/editText7"
            app:layout_constraintTop_toTopOf="@+id/editText7"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/editText7"/>

    <Button
            android:layout_width="@dimen/et_login_width"
            android:layout_height="@dimen/btn_log_in_height"
            android:text="@string/btn_Login"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_create_size"
            android:textAllCaps="false"
            android:background="@drawable/background4"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.292"
            android:id="@+id/button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:id="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintVertical_bias="0.223"/>
    <Button
            android:layout_width="@dimen/btn_login_width"
            android:layout_height="@dimen/btn_login_height"
            android:text="@string/btn_sign_up"
            android:background="@color/color2"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_login_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:onClick="changeActivity2"
            app:layout_constraintVertical_bias="0.225"/>


</androidx.constraintlayout.widget.ConstraintLayout>